test/bad/str_initialization.lat
int main() {
	string str = 1;
}
